[package]
name = "mrt_rs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "High-performance parser for MRT (Multi-threaded Routing Toolkit) routing data files"
repository = "https://github.com/placeholder/mrt-rs"
keywords = ["mrt", "bgp", "routing", "network", "parser"]
categories = ["parser-implementations", "network-programming"]

[dependencies]
byteorder = "1"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "parse_benchmark"
harness = false

[profile.release]
lto = true
codegen-units = 1
