[package]
name = "mrt_ingester"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "High-performance parser for MRT (Multi-threaded Routing Toolkit) routing data files"
repository = "https://github.com/nuclearcat/mrt-ingester"
readme = "README.md"
keywords = ["mrt", "bgp", "routing", "network", "parser"]
categories = ["parser-implementations", "network-programming"]
exclude = ["data.rib", "target/"]

[dependencies]
byteorder = "1"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
pprof = { version = "0.15", features = ["flamegraph", "criterion"] }
memmap2 = "0.9"

[[bench]]
name = "parse_benchmark"
harness = false

[profile.bench]
debug = true  # Enable debug symbols for profiling

[profile.release]
lto = true
codegen-units = 1
